// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiInput with 4 default rows 1`] = `
<div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-0"
      >
        1
        .
      </label>
      <input
        className="text-box "
        defaultValue=""
        disabled={false}
        id="test-0"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-1"
      >
        2
        .
      </label>
      <input
        className="text-box "
        defaultValue=""
        disabled={false}
        id="test-1"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <button
      className="button-secondary col-xs-12 col-sm-3"
      onClick={[Function]}
      type="button"
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        2
      </span>
    </button>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-2"
      >
        3
        .
      </label>
      <input
        className="text-box "
        defaultValue=""
        disabled={false}
        id="test-2"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <button
      className="button-secondary col-xs-12 col-sm-3"
      onClick={[Function]}
      type="button"
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        3
      </span>
    </button>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-3"
      >
        4
        .
      </label>
      <input
        className="text-box "
        defaultValue=""
        disabled={false}
        id="test-3"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <button
      className="button-secondary col-xs-12 col-sm-3"
      onClick={[Function]}
      type="button"
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        4
      </span>
    </button>
  </div>
  <button
    className="button-secondary"
    onClick={[Function]}
    type="button"
  >
    Add another row
  </button>
</div>
`;

exports[`MultiInput with 4 rows 1`] = `
<div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-0"
      >
        1
        .
      </label>
      <input
        className="text-box "
        defaultValue="One"
        disabled={false}
        id="test-0"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-1"
      >
        2
        .
      </label>
      <input
        className="text-box "
        defaultValue="Two"
        disabled={false}
        id="test-1"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <button
      className="button-secondary col-xs-12 col-sm-3"
      onClick={[Function]}
      type="button"
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        2
      </span>
    </button>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-2"
      >
        3
        .
      </label>
      <input
        className="text-box "
        defaultValue="Three"
        disabled={false}
        id="test-2"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <button
      className="button-secondary col-xs-12 col-sm-3"
      onClick={[Function]}
      type="button"
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        3
      </span>
    </button>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-3"
      >
        4
        .
      </label>
      <input
        className="text-box "
        defaultValue="Four"
        disabled={false}
        id="test-3"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <button
      className="button-secondary col-xs-12 col-sm-3"
      onClick={[Function]}
      type="button"
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        4
      </span>
    </button>
  </div>
  <button
    className="button-secondary"
    onClick={[Function]}
    type="button"
  >
    Add another row
  </button>
</div>
`;

exports[`MultiInput with no props 1`] = `
<div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-0"
      >
        1
        .
      </label>
      <input
        className="text-box "
        defaultValue=""
        disabled={false}
        id="test-0"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <button
    className="button-secondary"
    onClick={[Function]}
    type="button"
  >
    Add another row
  </button>
</div>
`;
